Fix Header layout problems

--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -3,6 +3,8 @@ $wb-purple: #a435f0;
 $wb-purple-hover: #9120e0;
 $light-purple: rgba(164, 53, 240, 0.08);
 
+@import '../../styles/_variables';
+
 .header-site {
   background-color: $white;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
@@ -31,7 +33,6 @@ $light-purple: rgba(164, 53, 240, 0.08);
     }
   }
 
-  // Поиск — теперь с фиолетовым акцентом
   .search-form {
     flex: 1;
     max-width: 900px;
@@ -64,33 +65,45 @@ $light-purple: rgba(164, 53, 240, 0.08);
       background: transparent;
     }
 
-    button {
-      background: $wb-purple;
-      color: white;
-      border: none;
-      padding: 0.85rem 1.2rem;
-      cursor: pointer;
-      font-size: 1.35rem;
-      transition: all 0.25s ease;
 
-      &:hover {
-        background: $wb-purple-hover;
-        transform: scale(1.08);
-      }
+  }
 
-      &:active {
-        transform: scale(1.02);
-      }
+  .search-form button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: none;
+    color: $wb-purple;
+    border: none;
+    margin: 10px;
+    cursor: pointer;
+    font-size: 1.35rem;
+    transition: all 0.25s ease;
+
+    &:hover {
+      transform: scale(1.08);
+    }
+
+    &:active {
+      transform: scale(1.02);
+    }
+
+    svg {
+      display: block;
     }
   }
 
-  .nav-links{
+
+  .nav-links {
     display: flex;
     gap: 2.5rem;
-  }
-    // Навигация — фиолетовое подчёркивание и hover
-  .nav-links a {
 
+    @media (max-width: $breakpoint-tablet) {
+      display: none;
+    }
+  }
+
+  .nav-links a {
     color: #333;
     font-weight: 500;
     text-decoration: none;
@@ -121,12 +134,20 @@ $light-purple: rgba(164, 53, 240, 0.08);
     }
   }
 }
+
 .menu-toggle {
-  display: block;
+  display: none;
   background: none;
   border: none;
   color: #333;
   cursor: pointer;
   padding: 0.5rem;
   z-index: 1001;
+}
+
+@media (max-width: $breakpoint-tablet) {
+  .menu-toggle {
+    display: block;
+  }
+
 }
